<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="40dp"
    android:background="@drawable/shape_white"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialogTitle"
        style="@style/textStyle"
        android:layout_width="300dp"
        android:gravity="center"
        android:paddingTop="25dp"
        android:text="@string/prompt"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dialogMessage"
        style="@style/textStyle"
        android:paddingTop="@dimen/padding"
        android:text="@string/sureDelete"
        android:textColor="@color/textColor54"
        android:textSize="@dimen/dialog_item_text_size"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"/>

    <View
        style="@style/line_h"
        android:layout_marginTop="25dp" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/cancel"
            android:textColor="@color/textColor54"
            android:textSize="16sp" />

        <View android:id="@+id/line" style="@style/line_v" />

        <Button
            android:id="@+id/confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/commit"
            android:textColor="@color/mainColor"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>