<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/transColor"
    android:orientation="vertical"
    android:padding="15dp"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_above="@+id/cancel"
        android:background="@drawable/shape_white"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/fromTakeImg"
            style="@style/textStyle"
            android:layout_width="match_parent"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/takePhotos"
            android:gravity="center_horizontal"
            android:textColor="@color/red"/>

        <View  style="@style/line_h"  />

        <TextView
            style="@style/textStyle"
            android:id="@+id/fromAlbum"
            android:layout_width="match_parent"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/forPhotoSelect"
            android:gravity="center_horizontal" />
    </LinearLayout>

    <TextView
        style="@style/textStyle"
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/cancel"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shape_white"
        android:gravity="center_horizontal"
        android:textColor="@color/textColor54"/>
</RelativeLayout>
